--- a/backend/template/base.twig
+++ b/backend/template/base.twig
@@ -113,6 +113,7 @@
 
 
 <script src="/backend/assets/js/forms.js"></script>
+<script src="/backend/assets/js/main.js"></script>
 
 {% block scripts %}
 {% endblock %}
