--- a/backend/template/list.twig
+++ b/backend/template/list.twig
@@ -8,6 +8,11 @@
                 <div class="card">
                     <div class="card-header">
                         <strong class="card-title">{{ title }}</strong>
+
+                        <div class="list-actions float-right">
+                            <a href="" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Aggiungi"><i class="fa fa-plus"></i></a>
+                        </div>
+
                     </div>
 
 
@@ -40,7 +45,9 @@
                                                     </div>
                                                 {% else %}
 
-                                                    <a href="{{ router_service.getRoute(item.getEntity()~".update").build({id:item.id}) }}">
+
+
+                                                    <a href="{{ router_service.getRoute(item.getEntity()~".mod").build({id:item.id}) }}">
                                                         <div style="max-width: 300px;max-height: 1.5em;overflow: hidden;">
                                                             {% if v[1] is iterable %}
                                                             {%  else %}
