--- a/backend/template/list.twig
+++ b/backend/template/list.twig
@@ -10,7 +10,7 @@
                         <strong class="card-title">{{ title }}</strong>
 
                         <div class="list-actions float-right">
-                            <a href="" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Aggiungi"><i class="fa fa-plus"></i></a>
+                            <a href="{{ router_service.getRoute(data[0].getEntity()~".add").build() }}" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Aggiungi"><i class="fa fa-plus"></i></a>
                         </div>
 
                     </div>
