--- a/frontend/spagnesi/template/notfound.twig
+++ b/frontend/spagnesi/template/notfound.twig
@@ -1,1 +1,11 @@
-not found
+{% extends "base/template.twig" %}
+
+{% block header %}{% endblock %}
+
+{% block content %}
+    <div class="container">
+        <h2 class="text-center">404</h2>
+    </div>
+{% endblock content %}
+
+
