--- a/backend/assets/css/custom.css
+++ b/backend/assets/css/custom.css
@@ -253,3 +253,142 @@ aside.left-panel{
     line-height: 1.5;
     padding: 0.3em 1.5em;
 }
+
+.lista-thumbnail figure{
+    height:200px;
+    width:200px;
+    overflow: hidden;
+    position: relative;
+}
+
+.lista-thumbnail figure img{
+    width: 100%;
+    height:auto;
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+}
+
+/* image dropper */
+.image-dropper {
+    border: 0.4em dashed rgba(0,0,0,0.1);
+}
+
+.image-dropper.is-dragover{
+    background: #fff;
+}
+
+
+.image-dropper span{
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 5em;
+    padding: 0.5em;
+    text-align: center;
+    display: block;
+    color: rgba(0,0,0,0.2);
+    pointer-events: none;
+}
+
+.image-dropper:after{
+    content: '';
+    clear: both;
+}
+
+.image-dropper .thumbnail{
+    width: 100px;
+    height: 100px;
+    background: #fff;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
+    float: left;
+    margin: 0.5em;
+}
+.image-dropper .thumbnail.uploading{
+    border: 1px solid #f00;
+}
+.image-dropper .thumbnail img{
+    max-width:100%;
+    max-height: 100%;
+}
+.image-dropper:after{
+    content:'';
+    clear:both;
+    display: block;
+}
+
+/* file browser */
+
+.fileBrowser-list{
+    list-style-type: none;
+    padding:0;
+    margin:0;
+}
+.fileBrowser-list:after{
+    clear: both;
+    content:'';
+    display: block;
+}
+.fileBrowser-directory{
+    width: 10em;
+    height:10em;
+
+}
+.fileBrowser-directory:before{
+    background: #d0ad41;
+    content: '';
+    display: block;
+    position: absolute;
+    left:10%;
+    height:10%;
+    bottom:80%;
+    width:30%;
+}
+.fileBrowser-directory:after{
+    content: '';
+    display: block;
+    height:60%;
+    width:80%;
+    left:10%;
+    bottom:20%;
+    position: absolute;
+    background: #dabe37;
+}
+
+.fileBrowser-file{
+    width: 10em;
+    height:10em;
+}
+
+.fileBrowser-file figure{
+    width:80%;
+    height:60%;
+    position: absolute;
+    bottom:20%;
+    left:10%;
+}
+.fileBroswer-entry{
+    float: left;
+    margin:0.5em;
+    position: relative;
+}
+.fileBroswer-entry h5{
+    font-size: 0.9em;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+
+    position: absolute;
+
+    width: 100%;
+    bottom:0;
+}
+
+.fileBrowser-navigation .btn{
+    background: #ccc;
+    margin: 0.5em;
+    color: #000;
+}
+.fileBrowser-navigation{
+    border-bottom:1px solid #ccc;
+}
