--- a/frontend/spagnesi/template/base/header/header.twig
+++ b/frontend/spagnesi/template/base/header/header.twig
@@ -10,9 +10,9 @@
                 <div class="text-center">
                     <div id="mainmenu" class="container">
                         <nav>
-                            <a href="">Divani</a>
-                            <a href="">Poltrone</a>
-                            <a href="">Divani letto</a>
+                            <a href="/divani">Divani</a>
+                            <a href="/poltrone">Poltrone</a>
+                            <a href="/divani-letto">Divani letto</a>
                         </nav>
 
                         <a href="/">
@@ -20,9 +20,9 @@
                         </a>
 
                         <nav>
-                            <a href="">Divani</a>
-                            <a href="">Poltrone</a>
-                            <a href="">Divani letto</a>
+                            <a href="/divani">Divani</a>
+                            <a href="/poltrone">Poltrone</a>
+                            <a href="/divani-letto">Divani letto</a>
                         </nav>
 
 
