--- a/applications/ecommerce/templates/prodotto.edit.immagini.twig
+++ b/applications/ecommerce/templates/prodotto.edit.immagini.twig
@@ -18,7 +18,7 @@
         <div class="row lista-thumbnail">
 
             {% for immagine in immagini %}
-            <figure class="float-left d-flex" style="margin: 0.5em;">
+            <figure class="float-left d-flex" style="margin: 0.5em;" data-id="{{ immagine.id }}">
                 <img src="{{ immagine.permalink }}" alt="" class="img-thumbnail">
             </figure>
             {% endfor %}
@@ -38,13 +38,21 @@
         console.log(file);
 
 
+        var lista = $(".lista-thumbnail");
+
 
         $.post( "{{ router_service.getRoute("ecommerce.catalogo.prodotto.image.add").build({id:prodotto.id}) }}",{
                 permalink : file.permalink
         }).complete(function(d){
-            console.log(d);
-        })
 
+            d = d.responseJSON;
+
+            var t = $('<figure class="float-left d-flex" data-id="'+d.id+'" style="margin: 0.5em;">\n' +
+                '                <img src="'+d.permalink+'" alt="" class="img-thumbnail">\n' +
+                '            </figure>');
+
+            $(".lista-thumbnail").append(t);
+        })
     });
 
     $(window).ready(function(){
@@ -52,6 +60,30 @@
             e.preventDefault();
             mediabrowser.open();
         })
+    });
+
+
+    $(document).on("mouseenter",".lista-thumbnail figure",function(){
+
+       if( $(this).find(".thumbnail-actions").length == 0  ){
+           var thumbnail = this;
+           var actions = $('<div class="thumbnail-actions"></div>');
+           var remove = $('<a href="" class="btn"><i class="fa fa-trash"></i></a>');
+           var id = $(this).attr("data-id");
+
+
+           $(remove).on("click",function( e ){
+               e.preventDefault();
+               $.post( "{{ router_service.getRoute("ecommerce.catalogo.prodotto.image.remove").build({id: ""}) }}"+id,{
+
+               }).complete(function(d){
+                    $(thumbnail).remove();
+               })
+           });
+           actions.append(remove);
+
+           $(this).append(actions);
+       }
     })
 
 </script>
