--- a/applications/ecommerce/templates/prodotto.edit.varianti.twig
+++ b/applications/ecommerce/templates/prodotto.edit.varianti.twig
@@ -4,7 +4,7 @@
     <div class="card-body">
 
         {% for variante in prodotto.varianti %}
-
+            <div class="variante">
             <div class="row">
                 <!--{% for varianteattributo in variante.attributi %}
                     <div class="col">
@@ -38,13 +38,13 @@
                 <div class="col">
                     <div class="form-group">
                         <label>Sku</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" value="{{ variante.sku }}">
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
                         <label>Prezzo</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" value="{{ variante.prezzo }}">
                     </div>
                 </div>
                 <div class="col">
@@ -53,6 +53,11 @@
                         <input type="text" class="form-control">
                     </div>
                 </div>
+
+                <div class="col">
+                    <a href="" class="btn btn-icon delete-variant" data-id="{{ variante.id }}"><i class="fa fa-trash"></i></a>
+                </div>
+            </div>
             </div>
         {% endfor %}
     </div>
@@ -77,7 +82,7 @@
             </div>
 
             <div class="modal-body">
-                <form class="form-ajax form-aggiungi" action="{{ router_service.getRoute("ecommerce.catalogo.prodotto.variant.add").build({id:prodotto.id}) }}" method="post" data-postevent="ecommerce.valore.aggiunto">
+                <form class="form-ajax" action="{{ router_service.getRoute("ecommerce.catalogo.prodotto.variant.add").build({id:prodotto.id}) }}" method="post" >
 
                     {% for attributo in attributiTipologia %}
                     <div class="form-group">
@@ -91,8 +96,12 @@
                     </div>
                     {% endfor %}
                     <div class="form-group">
+                        <label>Sku</label>
+                        <input type="text" class="form-control" name="sku">
+                    </div>
+                    <div class="form-group">
                         <label>Prezzo</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="prezzo">
                     </div>
                     <div class="form-group">
                         <label>Disponibilità</label>
@@ -116,6 +125,14 @@
             e.preventDefault();
 
             $("#modalInsertContent").modal();
+        })
+
+        $(document).on("click",".delete-variant",function(e){
+            e.preventDefault();
+            id = $(this).attr("data-id");
+            $.post("{{ router_service.getRoute('ecommerce.catalogo.prodotto.variant.remove').build({id:prodotto.id}) }}",{
+                id : id
+            });
         })
     })(jQuery);
 </script>
