--- a/assets/css/less/prodotto.less
+++ b/assets/css/less/prodotto.less
@@ -65,3 +65,63 @@
     }
   }
 }
+
+.product-top-bg{
+  img{
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    opacity: 0.6;
+  }
+  height: 10em;
+  overflow: hidden;
+  position: relative;
+  background: #000;
+}
+
+[name="id_variante"]{
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.product-thumbnail-preview{
+  text-align: center;
+  .images{
+    overflow: hidden;
+    position: relative;
+    .image-1{
+      transition: all 300ms;
+    }
+    .image-2{
+      position: absolute;
+      width: 100%;
+      top: 0%;
+      left:0;
+      transition: all 300ms;
+      opacity: 0;
+      transform: scale(1.2);
+    }
+    &:hover{
+      .image-2{
+        transform: scale(1);
+        opacity: 1;
+      }
+      .image-1{
+        transform: scale(0.8);
+      }
+    }
+  }
+
+
+
+}
+
+
+#scheda-prodotto{
+  .product-name{
+    font-size: 3em;
+  }
+}
