--- a/backend/template/mod.twig
+++ b/backend/template/mod.twig
@@ -14,11 +14,14 @@
         {% endif %}
         <div class="card">
             <div class="card-header">
+
+                {% if data.id %}
                 <div class="mod-actions float-right">
                     <a href="" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Clona"><i class="fa fa-plus"></i></a>
-                    <a href="" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Elimina"><i class="fa fa-trash"></i></a>
+                    <a href="{{ router_service.getRoute(data.getEntity()~".delete").build({id:data.id})}}" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Elimina"><i class="fa fa-trash"></i></a>
                     <a href="" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Attiva o disattiva"><i class="fa fa-eye"></i></a>
                 </div>
+                {% endif %}
             </div>
          <div class="card-body">
         {% for field in fields %}
