--- a/frontend/spagnesi/template/ecommerce/scheda-prodotto.twig
+++ b/frontend/spagnesi/template/ecommerce/scheda-prodotto.twig
@@ -1,29 +1,41 @@
 {% extends "base/template.twig" %}
 
 {% block content %}
-    <main style="padding-top: 130px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
 
+    <figure class="product-top-bg">
+        <img src="{{ prodotto.images[1].permalink }}">
+    </figure>
+    <main id="scheda-prodotto">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-8">
+                    <div class="owl-carousel owl-theme general-carousel" data-nav>
+                    {% for immagine in prodotto.images %}
+                        <img src="{{ immagine.permalink }}">
+                    {% endfor %}
+                    </div>
                 </div>
-                <div class="col-6">
-                    <h2>{{ prodotto.nome }}</h2>
-                    <p>{{ prodotto.descrizione }}</p>
+                <div class="col-4">
+                    <h2 class="product-name">{{ prodotto.nome }}</h2>
+                    Codice prodotto : {% for variante in prodotto.varianti %}
+                        <span class="product-sku" style="display: none;" {% for attributo in variante.attributi %}
+                            data-attribute{{ attributo.attributo.id }}="{{ attributo.valore.id }}"
+                                {% endfor %}>{{ variante.sku }}</span>
+                    {% endfor %}
+
+
+                    <p class="product-description">{{ prodotto.descrizione }}</p>
 
                     {% if prodotto.varianti|length > 1 %}
 
-                        <form class="variante" method="post" action="/carrello/aggiungi">
+                        <form id="form-add-variant" class="variante" method="post" action="/carrello/aggiungi">
                             {% for variante in prodotto.varianti %}
 
 
                                 <input type="radio" name="id_variante" value="{{ variante.id }}"
                                 {% for attributo in variante.attributi %}
                                     data-attribute{{ attributo.attributo.id }}="{{ attributo.valore.id }}"
-
-
-
-                            {% endfor %}>
+                                {% endfor %}>
                             {% endfor  %}
 
 
@@ -31,11 +43,7 @@
 
                                     <span class="prezzo">{{ variante.prezzo }}</span>
 
-                            <input type="text" name="quantita">
-                                    <input type="submit" value="aggiungi">
-
-
-
+                            <input type="hidden" name="quantita" value="1">
 
                         </form>
 
@@ -61,6 +69,12 @@
 
 
                             {% for attributo in attributi %}
+
+                                {% if attributo.valori|length == 1 %}
+                                    <input type="hidden" name="{{ attributo.attributo.id }}" value="{{ attributo.valori[0].valore.id }}">
+
+
+                                {% else %}
                                 <label>{{ attributo.attributo.nome }}</label>
                                 <select name="{{ attributo.attributo.id }}" class="form-control">
 
@@ -74,14 +88,21 @@
                                                         data-attribute{{ p[0] }}="{{ p[1] }}"
                                                     {% endfor  %}
                                                 {% endif %}
-
-
                                                 {% if valore.attributoprecedentevalore %}
                                             data-idprec="{{ valore.attributoprecedenteid }}" data-valueprec="{{ valore.attributoprecedentevalore }}"
-                                                {% endif %}>{{ valore.valore.valore }}</option>
+                                                {% endif %}
+
+
+                                                {% if variante.gotAttributeValue( valore.valore.id) %}
+                                                    selected
+                                                {% endif %}
+                                        >{{ valore.valore.valore }}</option>
                                     {% endfor %}
 
                                 </select>
+
+                                {% endif %}
+
                             {% endfor %}
                         </form>
 
@@ -95,6 +116,7 @@
                         </form>
                     {% endif %}
 
+                    <button type="submit" class="btn btn-secondary" form="form-add-variant"><i class="fa fa-cart"></i> Aggiungi al carrello</button>
                 </div>
             </div>
         </div>
@@ -111,11 +133,56 @@
 
         $('.scelta-attributi [data-idprec]').hide();
 
-        $(document).on("change","form.scelta-attributi",function () {
 
-            console.log( $(this).serializeArray());
+        var parseForm = function(){
+            me = $("form.scelta-attributi");
+
 
             selettore = [];
+            selettoreVariante = [];
+
+            selettoreAttributi = [];
+            selettoreNot =[];
+            variante = null;
+            $('.scelta-attributi [data-idprec]').hide();
+
+
+            console.log($(me));
+
+            $(me).serializeArray().forEach(function( o , index){
+
+
+                var s = '[data-attribute' + o.name +'="'+ o.value +'"]';
+                selettoreVariante.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
+                if(o.value !="") {
+                    selettoreAttributi.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
+                    selettoreNot.push('[data-attribute' + o.name+'][data-attribute' + o.name +'!="'+ o.value +'"]' );
+                    selettore.push('[data-idprec="' + o.name + '"][data-valueprec="' + o.value + '"]');
+                }
+                $(selettoreAttributi.join("")).show();
+                $(selettoreNot.join("")).hide();
+                $( '[data-attribute' + o.name+'][data-attribute' + o.name +'!="'+ o.value +'"]' ).hide();
+
+                /*
+                selettoreVariante.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
+                if(o.value !="") {
+                    selettoreAttributi.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
+                    selettore.push('[data-idprec="' + o.name + '"][data-valueprec="' + o.value + '"]');
+                }*/
+
+            });
+
+
+            console.log(selettoreAttributi);
+            $(selettoreAttributi.join("")).show();
+
+
+            $(selettoreVariante.join("")).prop("checked",true);
+        }
+        $(document).on("change","form.scelta-attributi",function () {
+
+            parseForm();
+           /* selettore = [];
             selettoreVariante = [];
 
             selettoreAttributi = [];
@@ -139,27 +206,19 @@
                 $(selettoreNot.join("")).hide();
                 $( '[data-attribute' + o.name+'][data-attribute' + o.name +'!="'+ o.value +'"]' ).hide();
 
-                /*
-                selettoreVariante.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
-                if(o.value !="") {
-                    selettoreAttributi.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
-                    selettore.push('[data-idprec="' + o.name + '"][data-valueprec="' + o.value + '"]');
-                }*/
-
             });
 
 
             $(selettoreAttributi.join("")).show();
 
 
-            $(selettoreVariante.join("")).prop("checked",true);
-
-
-
-
-
-
+            $(selettoreVariante.join("")).prop("checked",true);*/
         })
+
+        $(window).ready(function(){
+            parseForm();
+        })
+
     })(jQuery);
     </script>
 {% endblock %}
