--- a/assets/css/less/buttons.less
+++ b/assets/css/less/buttons.less
@@ -1,8 +1,9 @@
 .btn{
-  border-radius: .3em;
-  padding:.375em 2em;
+  border-radius: .2em;
+  padding:.5em 2em;
 
   cursor: pointer;
+
 }
 
 .btn-secondary{
@@ -22,4 +23,10 @@
     background-color: #fff;
     border-color: #eee;
   }
+}
+
+.btn-white{
+  color: #000;
+  border-color:#000;
+  background: #fff;
 }
