--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -57,6 +57,7 @@ h2 {
 
 
 @import "less/buttons";
+@import "less/forms";
 @import "less/header";
 @import "less/breadcrumbs";
 @import "less/home";
