--- a/frontend/spagnesi/template/parti/barra-ricerca.twig
+++ b/frontend/spagnesi/template/parti/barra-ricerca.twig
@@ -1,48 +1,67 @@
 <section class="search-bar-container">
     <div class="search-bar">
-        <div class="row">
+        <form id="form-search-bar" action="{{ router_service.getRoute("frontend.ecommerce.ricerca").build() }}">
+            <div class="row">
 
-            <div class="col">
-                <label class="d-block text-center">Filtra per prodotto</label>
-                <div class="text-center">
-                    <img src="/assets/img/icone/divano.svg" class="mr-4">
-                    <img src="/assets/img/icone/poltrona.svg" class="mr-2 ml-2">
-                    <img src="/assets/img/icone/letto.svg" class="ml-4">
-                </div>
-            </div>
+                <div class="col">
+                    <label class="d-block text-center">Filtra per prodotto</label>
+                    <div class="text-center scelta-tipologia">
+                        <label>
+                            <input type="checkbox" name="tipologia[divano]" value="3">
+                            <img src="/assets/img/icone/divano.svg" class="mr-4">
+                        </label>
 
-            <div class="col">
-                <label class="d-block">Cerca per parola chiave o nome</label>
+                        <label>
+                            <input type="checkbox" name="tipologia[poltrona]" value="4">
+                            <img src="/assets/img/icone/poltrona.svg" class="mr-2 ml-2">
+                        </label>
 
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">
-                            <img src="/assets/img/icone/cerca.svg">
-                        </span>
+                        <label>
+                            <input type="checkbox" name="tipologia[letto]" value="5">
+                            <img src="/assets/img/icone/letto.svg" class="ml-4">
+                        </label>
                     </div>
-                    <input type="text" class="form-control" placeholder="Parola chiave" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
 
-            </div>
+                <div class="col">
+                    <label class="d-block">Cerca per parola chiave o nome</label>
 
-            <div class="col-2">
-                <label class="d-block">Numero di posti</label>
-
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">
-                            <img src="/assets/img/icone/seduta.svg">
-                        </span>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">
+                                <img src="/assets/img/icone/cerca.svg">
+                            </span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Parola chiave" aria-label="Username" aria-describedby="basic-addon1" name="ricerca">
                     </div>
-                    <input type="number" class="form-control" placeholder="3" aria-label="Username" aria-describedby="basic-addon1">
+
+                </div>
+
+                <div class="col-2">
+                    <label class="d-block">Numero di posti</label>
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">
+                                <img src="/assets/img/icone/seduta.svg">
+                            </span>
+                        </div>
+
+                        <select class="form-control" name="attributo[5]">
+                            <option value="">Qualsiasi</option>
+                            <option value="19">2</option>
+                            <option value="34">2.5</option>
+                            <option value="20">3</option>
+                        </select>
+                    </div>
+
+                </div>
+
+                <div class="col">
+                    <button type="submit" class="btn btn-secondary d-block mt-5">Cerca</button>
                 </div>
 
             </div>
-
-            <div class="col">
-                <a href="" class="btn btn-secondary d-block mt-5">Cerca</a>
-            </div>
-
-        </div>
+        </form>
     </div>
 </section>
