--- a/frontend/spagnesi/template/base/header/header.twig
+++ b/frontend/spagnesi/template/base/header/header.twig
@@ -16,7 +16,8 @@
                         </nav>
 
                         <a href="/">
-                            <img class="logo" src="/assets/img/logo.png" alt="Cartiamo">
+                            <img class="logo" src="/assets/img/logo/logo-white.png" alt="Cartiamo">
+                            <img class="logo logo-black" src="/assets/img/logo/logo-black.png" alt="Cartiamo">
                         </a>
 
                         <nav>
