--- a/frontend/spagnesi/template/base/template-o.twig
+++ b/frontend/spagnesi/template/base/template-o.twig
@@ -1,4 +1,4 @@
-<html lang="it">
+w<html lang="it">
 <head>
     <title>{{ meta.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
