--- a/applications/ecommerce/templates/prodotto.edit.varianti.twig
+++ b/applications/ecommerce/templates/prodotto.edit.varianti.twig
@@ -55,6 +55,7 @@
                 </div>
 
                 <div class="col">
+                    <a href="{{ router_service.getRoute(variante.getEntity()~".mod").build({id:variante.id}) }}" target="_blank" class="btn btn-icon" data-id="{{ variante.id }}"><i class="fa fa-eye"></i></a>
                     <a href="" class="btn btn-icon delete-variant" data-id="{{ variante.id }}"><i class="fa fa-trash"></i></a>
                 </div>
             </div>
@@ -106,6 +107,12 @@
                                 </select>
                             </div>
                             {% endfor %}
+
+                            <div class="form-group">
+                                <label>Nome</label>
+                                <input type="text" class="form-control" name="nome">
+                            </div>
+
                             <div class="form-group">
                                 <label>Sku</label>
                                 <input type="text" class="form-control" name="sku">
@@ -124,7 +131,8 @@
                         <div class="col-6">
                             <h5>Sovrascrivi campi prodotto</h5>
                             <br>
-                            {% for campo in prodotto.tipologia.campi %}
+                            {% for campo in prodotto.tipologia.campi   %}
+
 
                                 {% include "fields/default.twig" with {
                                     label : campo.nome,
