--- a/frontend/spagnesi/template/ecommerce/scheda-prodotto.twig
+++ b/frontend/spagnesi/template/ecommerce/scheda-prodotto.twig
@@ -3,10 +3,73 @@
 {% block content %}
 
     <figure class="product-top-bg">
-        <img src="{{ prodotto.images[1].permalink }}">
+        <img src="{{ prodotto.images[0].permalink }}">
     </figure>
     <main id="scheda-prodotto">
         <div class="container">
+
+            <div>
+
+
+                <div class="row mt-5">
+                    <div class="col-8">
+                        <div class="owl-carousel owl-theme general-carousel mb-5" data-nav>
+                            {% for immagine in prodotto.images %}
+                                <img src="{{ immagine.permalink }}">
+                            {% endfor %}
+                        </div>
+
+                        {% for variante in prodotto.varianti %}
+                            <div class="card variante mb-5">
+                                <div class="card-header">
+                                    <h3>{{ variante.nome }}</h3>
+                                </div>
+                                <div class="card-body">
+                                    <form method="post" action="/carrello/aggiungi">
+                                        <input type="hidden" name="id_variante" value="{{ variante.id }}">
+                                        <input type="hidden" name="quantita" value="1">
+
+                                        <div class="row">
+                                            <div class="col-3">
+                                                <img src="{{ variante.images[0].permalink }}">
+                                            </div>
+
+
+                                            <div class="col-9">
+
+
+                                                <div>
+                                                {% for attributo in variante.attributi %}
+                                                    {{ attributo.attributo.nome }}
+                                                    {{ attributo.valore.valore }}
+                                                {% endfor %}
+                                                </div>
+                                                <button type="submit" class="btn btn-secondary"><i class="fa fa-cart-plus"></i> Aggiungi al carrello </button>
+                                            </div>
+
+                                        </div>
+
+
+                                    </form>
+                                </div>
+                            </div>
+                        {%  endfor %}
+                    </div>
+                    <div class="col-4">
+                        <h2 class="product-name">{{ prodotto.nome }}</h2>
+                        <p>
+                            Codice prodotto :
+                        </p>
+                        <div>
+                            {{ prodotto.descrizione|raw }}
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
             <div class="row mt-5">
                 <div class="col-8">
                     <div class="owl-carousel owl-theme general-carousel" data-nav>
@@ -123,102 +186,3 @@
     </main>
 {% endblock %}
 
-
-{% block javascript_footer %}
-
-    {{ parent() }}
-    <script>
-    (function( $ ){
-
-
-        $('.scelta-attributi [data-idprec]').hide();
-
-
-        var parseForm = function(){
-            me = $("form.scelta-attributi");
-
-
-            selettore = [];
-            selettoreVariante = [];
-
-            selettoreAttributi = [];
-            selettoreNot =[];
-            variante = null;
-            $('.scelta-attributi [data-idprec]').hide();
-
-
-            console.log($(me));
-
-            $(me).serializeArray().forEach(function( o , index){
-
-
-                var s = '[data-attribute' + o.name +'="'+ o.value +'"]';
-                selettoreVariante.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
-                if(o.value !="") {
-                    selettoreAttributi.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
-                    selettoreNot.push('[data-attribute' + o.name+'][data-attribute' + o.name +'!="'+ o.value +'"]' );
-                    selettore.push('[data-idprec="' + o.name + '"][data-valueprec="' + o.value + '"]');
-                }
-                $(selettoreAttributi.join("")).show();
-                $(selettoreNot.join("")).hide();
-                $( '[data-attribute' + o.name+'][data-attribute' + o.name +'!="'+ o.value +'"]' ).hide();
-
-                /*
-                selettoreVariante.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
-                if(o.value !="") {
-                    selettoreAttributi.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
-                    selettore.push('[data-idprec="' + o.name + '"][data-valueprec="' + o.value + '"]');
-                }*/
-
-            });
-
-
-            console.log(selettoreAttributi);
-            $(selettoreAttributi.join("")).show();
-
-
-            $(selettoreVariante.join("")).prop("checked",true);
-        }
-        $(document).on("change","form.scelta-attributi",function () {
-
-            parseForm();
-           /* selettore = [];
-            selettoreVariante = [];
-
-            selettoreAttributi = [];
-            selettoreNot =[];
-            variante = null;
-            $('.scelta-attributi [data-idprec]').hide();
-
-
-            $(this).serializeArray().forEach(function( o , index){
-
-                var s = '[data-attribute' + o.name +'="'+ o.value +'"]';
-
-                selettoreVariante.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
-
-                if(o.value !="") {
-                    selettoreAttributi.push('[data-attribute' + o.name +'="'+ o.value +'"]' );
-                    selettoreNot.push('[data-attribute' + o.name+'][data-attribute' + o.name +'!="'+ o.value +'"]' );
-                    selettore.push('[data-idprec="' + o.name + '"][data-valueprec="' + o.value + '"]');
-                }
-                $(selettoreAttributi.join("")).show();
-                $(selettoreNot.join("")).hide();
-                $( '[data-attribute' + o.name+'][data-attribute' + o.name +'!="'+ o.value +'"]' ).hide();
-
-            });
-
-
-            $(selettoreAttributi.join("")).show();
-
-
-            $(selettoreVariante.join("")).prop("checked",true);*/
-        })
-
-        $(window).ready(function(){
-            parseForm();
-        })
-
-    })(jQuery);
-    </script>
-{% endblock %}
