--- a/frontend/spagnesi/template/base/template.twig
+++ b/frontend/spagnesi/template/base/template.twig
@@ -1,5 +1,4 @@
-{% include "base/head/head.twig" %}
-
+{% include "base/head/head.twig" with {headerClass : headerClass}%}
 {% block content %}{% endblock content %}
 
 
