--- a/assets/css/less/header.less
+++ b/assets/css/less/header.less
@@ -14,7 +14,7 @@
   }
   transition: all @headerSpeedTransition ;
   
-  &.fixed{
+  &.fixed,&.always-fixed{
     background: rgba(255,255,255,0.85);
     color: #000;
     padding:0;
